# modelpicker

./: .mcp.json  README.ko.md  README.md  pyproject.toml
examples/: config.example.yaml  context.example.json  savings_demo.py
hooks/: escalation_nudge.py
src/fableite/: __init__.py  cli.py  config.py  constants.py  llm.py  models.py  report.py  router.py
src/fablite/: __init__.py  cli.py  models.py
src/modelpicker/: __init__.py  cli.py  config.py  constants.py  executor.py  llm.py  mcp_server.py  models.py  router.py
tests/: conftest.py  test_cli.py  test_executor.py  test_golden.py  test_llm.py  test_models.py  test_router.py
tests/fixtures/: golden_cases.yaml
