[project]
name = "modelpicker"
version = "0.1.0"
description = "Model routing harness — a cheap router model judges task difficulty and picks the execution model tier. v1 is router-only: it outputs a validated RoutingDecision JSON."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
modelpicker = "modelpicker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelpicker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
