[project]
name = "modelpicker"
version = "0.2.0"
description = "Model routing harness — a cheap router model judges task difficulty and picks the execution model tier; an executor runs the task with graceful fallback. CLI + MCP server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
mcp = ["mcp>=1.2"]

[project.scripts]
modelpicker = "modelpicker.cli:main"
modelpicker-mcp = "modelpicker.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelpicker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
